# scaffold_vscode_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  settings.cmake
.conan_config/profiles/: linux-clang-debug  linux-clang-release
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
scripts/: build_and_run_ninja_clang.bat  build_debug.sh  build_release.sh  clean.sh  conan_install.sh  env.sh  generate.sh  generate_ninja.sh  install.sh  install_ninja_clang.bat
toolchains/: linux.cmake
